# qtdesignviewer

./: CMakeLists.txt  README.md  importdummy.qml  importdummy_wasm.qml  index.html  main.cpp  qmlprojector.pro  qtdesignviewer.pro
.github/workflows/: build-apks.yml  build-wasm.yml
android/: AndroidManifest.xml
qmlprojects/: index.json
www/: CMakeLists.txt  index.html  version.json
www/qmlprojects/: index.json
